# yatangaki

./: Cargo.toml  README.md  headless.sh  hooks.js  main.py  yatangacli
confs/: known_libs.txt  script_domain_exclusion.txt
schema/: config.sql  network_logs.sql
scripts/: proxied_chromium.sh
src/: certificates.rs  config.rs  db.rs  main.rs  proxy.rs  proxy_logs.rs  settings.rs
src/db/: config.rs  logs.rs  mod.rs
src/proxy/: certificates.rs  mod.rs  service.rs  tls.rs
src/ui/: commons.rs  mod.rs  proxy_logs.rs  request_editor.rs  settings.rs  start_menu.rs
