cargo-features = ["codegen-backend"]

[package]
name = "yatangaki"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", default-features = false, features = ["advanced", "tokio"] }
iced_aw = "0.9"
tokio = { version = "1", features = ["time", "sync", "net", "macros", "rt"] }
hyper = { version = "1", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
http-body-util = "0.1"
rcgen = { version = "0.13", features = ["crypto", "x509-parser"] }
rustls-pki-types = "1.7.0"
rustls = { version = "^0.23", default-features = false, features = ["std"] }
tokio-rustls = { version = "^0.26", default-features = false, features = ["tls12", "ring"] }
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls"] }
http = "^1"
toml = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }

[profile.dev]
debug = 0
strip = true
codegen-backend = "cranelift"
overflow-checks = false

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Zlinker-features=-lld"]
