cargo-features = ["codegen-backend"]

[package]
name = "yatangaki"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.0-dev", git = "https://github.com/iced-rs/iced", features = ["advanced", "tokio"] }
iced_aw = { version = "0.9.3", git ="https://github.com/iced-rs/iced_aw" }
tokio = { version = "1", features = ["time", "sync", "net", "macros", "rt"] }
hyper = { version = "1", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
http-body-util = "0.1"
rcgen = { version = "0.13", features = ["crypto", "x509-parser", "pem"] }
rustls-pki-types = "1.7.0"
rustls = { version = "^0.23", default-features = false, features = ["std"] }
tokio-rustls = { version = "^0.26", default-features = false, features = ["tls12", "ring"] }
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls"] }
http = "^1"
rusqlite = "0.32"

[profile.dev]
debug = 0
strip = true
codegen-backend = "cranelift"
overflow-checks = false

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Zlinker-features=-lld"]
